VeraSandBox2016/src/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Expert_Response_Professionalism_EXPRP__c</fullName>
        <inlineHelpText>Responsiveness and professionalism leading up to and during deployment</inlineHelpText>
        <label>Expert Response, Professionalism (EXPRP)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Specific_Contributions__c</fullName>
        <inlineHelpText>In what ways the expert specifically contributed to the investigation</inlineHelpText>
        <label>Expert Specific Contributions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expert_Team_Integration_EXP_TI__c</fullName>
        <inlineHelpText>Integration in the team</inlineHelpText>
        <label>Expert Team Integration (EXP-TI)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert_Use_Again_EXP_UA__c</fullName>
        <inlineHelpText>Would the requesting entity use this expert again</inlineHelpText>
        <label>Expert Use Again (EXP-UA)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FRIS_Explanation__c</fullName>
        <label>FRIS - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FRMT_Explanation__c</fullName>
        <inlineHelpText>Explanation and recommendation on removing or adding information/material, or other adaptations.</inlineHelpText>
        <label>FRMT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_AMG_Explanation__c</fullName>
        <label>FR-AMG - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Ability_to_Mentor_and_Guide_FR_AMG__c</fullName>
        <inlineHelpText>Extent to which Expert feels like he/she was able to mentor and provide some guidance to mentees in his/her area of expertise</inlineHelpText>
        <label>FR-Ability to Mentor and Guide (FR-AMG)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_CCR_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-CCR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_CVIC_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-CVIC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Confidential_Consent_Respect_FR_CCR__c</fullName>
        <label>FR-Confidential-Consent-Respect (FR-CCR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_DSI_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-DSI - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Document_Secure_Information_FR_DSI__c</fullName>
        <label>FR-Document, Secure Information (FR-DSI)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Expert_Specific_Mentor_Contributions__c</fullName>
        <label>FR-Expert Specific Mentor Contributions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_GIHAR_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-GIHAR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Guidance_on_ICJ_HRF_Acc_Ref_FRGIHAR__c</fullName>
        <inlineHelpText>Guidance on/able to cover &quot;International Criminal Justice and Human Rights Frameworks, Accountability and Referral Options&quot;</inlineHelpText>
        <label>FR Guidance on ICJ-HRF-Acc-Ref (FRGIHAR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_IAM_Explanation__c</fullName>
        <label>FR-IAM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Impact_Account_Mechanisms_FR_IAM__c</fullName>
        <label>FR-Impact Account Mechanisms (FR-IAM)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Impact_Safety_Wbeing_Survivors_FRIS__c</fullName>
        <inlineHelpText>Extent to which the mentoring has impacted the work of mentees that benefit the safety and well-being of survivors</inlineHelpText>
        <label>FR-Impact Safety-Wbeing Survivors (FRIS)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_MRT_Explanation__c</fullName>
        <label>FR-MRT - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Mentees_Right_Target_FR_MRT__c</fullName>
        <inlineHelpText>Level to which the mentees were the right target for mentoring project</inlineHelpText>
        <label>FR-Mentees Right Target (FR-MRT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Mentoring_Activities_Contribution__c</fullName>
        <label>FR-Mentoring Activities Contribution</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Mentoring_Tool_FRMT__c</fullName>
        <inlineHelpText>Usefulness of the tool on mentoring of First Responders to prepare for the mission</inlineHelpText>
        <label>FR Mentoring Tool (FRMT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_OAC_Details__c</fullName>
        <inlineHelpText>Details of other areas covered</inlineHelpText>
        <label>FR-OAC - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_OAS_Details__c</fullName>
        <inlineHelpText>Details of other areas suggested to cover</inlineHelpText>
        <label>FR-OAS - Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_OLAM_Explanation__c</fullName>
        <inlineHelpText>If yes, which ones and for which category of information / If no, why not</inlineHelpText>
        <label>FR-OLAM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_OMR_Explanation__c</fullName>
        <label>FR-OMR - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Org_Liaise_Acc_Mechanisms_FR_OLAM__c</fullName>
        <label>FR-Org Liaise Acc Mechanisms (FR-OLAM)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Other_Areas_Covered_FR_OAC__c</fullName>
        <label>FR-Other Areas Covered (FR-OAC)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Other_Areas_Suggested_FR_OAS__c</fullName>
        <inlineHelpText>Other areas suggested to cover with the group of mentees</inlineHelpText>
        <label>FR-Other Areas Suggested (FR-OAS)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Overall_Mentoring_Relevance_FR_OMR__c</fullName>
        <inlineHelpText>Overall relevance of the mentoring provided to the mentees in the context of their work with conflict-related violence</inlineHelpText>
        <label>FR-Overall Mentoring Relevance (FR-OMR)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_PFA_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-PFA - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Psychological_First_Aid_FR_PFA__c</fullName>
        <inlineHelpText>Guidance on/able to cover &quot;Psychological First Aid&quot;</inlineHelpText>
        <label>FR-Psychological First Aid (FR-PFA)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_RFM_Explanation__c</fullName>
        <label>FR-RFM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_RMO_Explanation__c</fullName>
        <label>FR-RMO - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Recommend_Followup_Mentoring_FR_RFM__c</fullName>
        <label>FR-Recommend Followup Mentoring (FR-RFM)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Recommend_Mentoring_the_Org_FR_RMO__c</fullName>
        <label>FR-Recommend Mentoring the Org (FR-RMO)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_SGBV_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-SGBV - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_SOA_Details__c</fullName>
        <inlineHelpText>Details of other areas suggested to cover</inlineHelpText>
        <label>FR-SOA Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_SS_Explanation__c</fullName>
        <inlineHelpText>If no, why not / If yes, how</inlineHelpText>
        <label>FR-SS - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Safety_and_Security_FR_SS__c</fullName>
        <inlineHelpText>Guidance on/able to cover &quot;Safety and Security (of Mentors, First Responders, and Victims/Witnesses)&quot;</inlineHelpText>
        <label>FR-Safety and Security (FR-SS)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Sensitivities_Address_CVIC_FR_CVIC__c</fullName>
        <label>FR-Sensitivities Address CVIC (FR-CVIC)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Sensitivities_Address_SGBV_FR_SGBV__c</fullName>
        <label>FR-Sensitivities Address SGBV (FR-SGBV)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Suggest_Other_Areas_for_MFR_FR_SOA__c</fullName>
        <label>FR-Suggest Other Areas for MFR (FR-SOA)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_Comments__c</fullName>
        <label>F - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flexibility_F__c</fullName>
        <label>Flexibility (F)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow-up By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Details__c</fullName>
        <label>Follow-up Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GM_Explanation__c</fullName>
        <inlineHelpText>Explanation and aspects that will benefit the Expert&apos;s work</inlineHelpText>
        <label>GM - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gain_from_Mission_GM__c</fullName>
        <inlineHelpText>Rating of what Expert gained from taking part in the mission</inlineHelpText>
        <label>Gain from Mission (GM)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <inlineHelpText>Comments/suggestions about this deployment</inlineHelpText>
        <label>General Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IA_Comments__c</fullName>
        <label>IA - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICT_Explanation__c</fullName>
        <label>ICT Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IE_Comments__c</fullName>
        <label>IE - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IL_Comments__c</fullName>
        <label>IL - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INT_CSD_Explanation__c</fullName>
        <inlineHelpText>List of the spoken dialect(s) that were challenging and explanation why</inlineHelpText>
        <label>INT-CSD - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INT_Challenges_Spoken_Dialects_INT_CSD__c</fullName>
        <label>INT-Challenges Spoken Dialects (INT-CSD)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>INT_Form_of_Interpretation__c</fullName>
        <label>INT - Form of Interpretation</label>
        <picklist>
            <picklistValues>
                <fullName>Simultaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consecutive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whispering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_of_Contract_Terms_ICT__c</fullName>
        <inlineHelpText>Extent to which the terms of the contract were implemented</inlineHelpText>
        <label>Implementation of Contract Terms (ICT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Suggestions__c</fullName>
        <label>Improvement Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inclusive_Leadership_IL__c</fullName>
        <label>Inclusive Leadership (IL)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_not_Addressed_IA__c</fullName>
        <label>Information not Addressed (IA)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Assistance_and_Availability_AA__c</fullName>
        <inlineHelpText>JRR assistance and availability during process leading up to deployment</inlineHelpText>
        <label>JRR Assistance and Availability (AA)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Briefing_Pack_Timeliness_BPT__c</fullName>
        <inlineHelpText>Timeliness in providing the briefing package</inlineHelpText>
        <label>JRR Briefing Pack Timeliness (BPT)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Briefing_Pack_Usefulness_BPU__c</fullName>
        <inlineHelpText>Usefulness of the briefing package in helping prepare for the mission</inlineHelpText>
        <label>JRR Briefing Pack Usefulness (BPU)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_FC_Explanation__c</fullName>
        <label>JRR-FC - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JRR_Facilitating_Communication_JRR_FC__c</fullName>
        <inlineHelpText>Rating of JRR&apos;s role in facilitating communication between requesting entity, the expert and (if applicable) the expert&apos;s employer</inlineHelpText>
        <label>JRR Facilitating Communication (JRR-FC)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Role_in_Ensuring_Funding_REF__c</fullName>
        <inlineHelpText>Rating of the role JRR played in ensuring funding (if applicable)</inlineHelpText>
        <label>JRR Role in Ensuring Funding (REF)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRR_Role_in_Identifying_Dep_Mech_RIDM__c</fullName>
        <inlineHelpText>Rating of the role JRR played in identifying deployment mechanisms (if applicable)</inlineHelpText>
        <label>JRR Role in Identifying Dep Mech. (RIDM)</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KE_Comments__c</fullName>
        <label>KE - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LS_Comments__c</fullName>
        <label>LS - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LT_Comments__c</fullName>
        <label>LT - Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logistical_Support_LS__c</fullName>
        <label>Logistical Support (LS)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MI_Comments__c</fullName>
        <label>MI - Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MO_Explanation__c</fullName>
        <label>MO - Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Lesson_Learned__c</fullName>
        <label>Main Lesson Learned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Organization_MO__c</fullName>
        <inlineHelpText>Rating of the mission in terms of organisation (fees, expenses, travel arrangements, reporting requirements, etc.)</inlineHelpText>
        <label>Mission Organization (MO)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Content__c</fullName>
        <label>Module Content</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Presentation__c</fullName>
        <label>Module Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>